--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: lightgray;
+  background-color: darkgrey;
   font-size: var(--base-font-size);
   margin: 0;
   padding: 0;
